# adk_agent_evaluation

./: .env  .gitignore  1_generate_scenarios.py  2_simulate_dialogues.py  3_evaluate_traces.py  README.md  pyproject.toml  test_inference.py
output/: evaluation_report.json  generated_scenarios.json  simulated_traces.json
travel_agent/: __init__.py  agent.py  tools.py
