[project]
name = "programmatic-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-aiplatform[adk,evaluation]>=1.160.0",
    "google-genai>=2.10.0",
    "python-dotenv>=1.2.2",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
